Sculpt mode - hidden mesh parts unhide when sculpting if VBO enabled. #39950

Closed
opened 2014-04-29 11:50:34 +02:00 by Gatis Kurzemnieks · 30 comments

2.70.4

If VBO is enabled, then when in sculpt mode and you have hidden some mesh parts, they unhide as soon as you start sculpting (I used move brush).
When disabling VBO, everything works correctly.
Steps: Enable VBO in prefs, save, relaunch. Enter sculpt mode for object, hide some mesh part, try to sculpt with brush.

Another potential issue is when changing subdivision levels - everything becomes visible on other subd levels, but hidden parts are not editable. This is very very confusing.
Steps: hide some part of mesh, go to higher subd level - everything should be visible now, try sculpting previously hidden area!

2.70.4 If VBO is enabled, then when in sculpt mode and you have hidden some mesh parts, they unhide as soon as you start sculpting (I used move brush). When disabling VBO, everything works correctly. Steps: Enable VBO in prefs, save, relaunch. Enter sculpt mode for object, hide some mesh part, try to sculpt with brush. Another potential issue is when changing subdivision levels - everything becomes visible on other subd levels, but hidden parts are not editable. This is very very confusing. Steps: hide some part of mesh, go to higher subd level - everything should be visible now, try sculpting previously hidden area!

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @GatisKurzemnieks

Added subscriber: @GatisKurzemnieks
Antonis Ryakiotakis was assigned by Sergey Sharybin 2014-04-29 16:07:51 +02:00

Added subscribers: @Psy-Fi, @Sergey

Added subscribers: @Psy-Fi, @Sergey

@Psy-Fi, mind having a look? Thanks!

@Psy-Fi, mind having a look? Thanks!

Something must be wrong because I cannot reproduce either of those issues here.

Something must be wrong because I cannot reproduce either of those issues here.

@Psy-Fi, ok..

@GatisKurzemnieks, which OS you're on BTW? Does it work with an official release?

@Psy-Fi, ok.. @GatisKurzemnieks, which OS you're on BTW? Does it work with an official release?

huh, I my self cant reproduce first issue either. That is strange.
But the second issue still happens - as soon as I press page-up to add higher smoothing level, everything shows up, but previously hidden part is not editable

I'm on win8 64bit, build-bot build from yesterday.

huh, I my self cant reproduce first issue either. That is strange. But the second issue still happens - as soon as I press page-up to add higher smoothing level, everything shows up, but previously hidden part is not editable I'm on win8 64bit, build-bot build from yesterday.

Please test official release as well.

Please test official release as well.

I just tested on official 2.70a and the second issue is still there!! It seems like polygon visibility flags are stored only in specific subdivision level or something like that.

Could not reproduce first issue anymore. Previously I also got some crashes when switching between subd leveld in sculpt mode with some polygons hidden and VBO enabled, but I can't reproduce this either.. maybe bug in videocard drivers or something.

I just tested on official 2.70a and the second issue is still there!! It seems like polygon visibility flags are stored only in specific subdivision level or something like that. Could not reproduce first issue anymore. Previously I also got some crashes when switching between subd leveld in sculpt mode with some polygons hidden and VBO enabled, but I can't reproduce this either.. maybe bug in videocard drivers or something.

I can confirm some illusive weird issue, I'll try to reproduce the case exactly.

I can confirm some illusive weird issue, I'll try to reproduce the case exactly.

Nope, must have been me confused by using grab brush and going up and down across multires levels.

Nope, must have been me confused by using grab brush and going up and down across multires levels.

Can you mask and hide parts of your mesh when in higher subdivision levels? I can't - mash is visible and polygons are hiding only in lower level.

Can you mask and hide parts of your mesh when in higher subdivision levels? I can't - mash is visible and polygons are hiding only in lower level.

Even though I can, I am getting out of memory errors in OpenGL.

I think I may have an idea why this is happening, I'll check it out later.

Even though I can, I am getting out of memory errors in OpenGL. I think I may have an idea why this is happening, I'll check it out later.

I tried to make some drawing corrections here, could you try a buildbot tomorrow to see if this persists?

I tried to make some drawing corrections here, could you try a buildbot tomorrow to see if this persists?

I tried the buildbot right now - there was no difference. As soon as I create and go to higher subd level in sculpt mode - all polies become visible. And when I go back to original level - they are hidden again.

I have geforce 780gtx if that makes difference

I tried the buildbot right now - there was no difference. As soon as I create and go to higher subd level in sculpt mode - all polies become visible. And when I go back to original level - they are hidden again. I have geforce 780gtx if that makes difference

System information per our bug reporting template would be useful indeed.
That means a test file, memory amount, system, processor, even GPU driver version.

This could well be a memory limitation. It's totally curious because each face is tested against for visibility before drawing...I can't see how this could happen.
However I really don't have any more suggestions here. I can't reproduce the issue here and the changes I did last night should completely skip drawing parts of the mesh when totally hidden independently of driver.

Can you do a factory startup (and turn VBO on obviously) and see if the issue persists?

System information per our bug reporting template would be useful indeed. That means a test file, memory amount, system, processor, even GPU driver version. This could well be a memory limitation. It's totally curious because each face is tested against for visibility before drawing...I can't see how this could happen. However I really don't have any more suggestions here. I can't reproduce the issue here and the changes I did last night should completely skip drawing parts of the mesh when totally hidden independently of driver. Can you do a factory startup (and turn VBO on obviously) and see if the issue persists?

Also another question (which would be already answered if you had attached a blend file). What draw mode is the viewport in?

Also another question (which would be already answered if you had attached a blend file). What draw mode is the viewport in?

sculpt_scene.blend

Ok, I attached simple scene. For me - as soon as I go down to 0 subd view level - polygons are hidden. As soon as i go up - all becomes visible. Hiding works only in solid mode.
If i go to textured mode - all polygons are visible always. Also no masking is visible.

My system:
i7, 32gb ram, geforce 780gtx 3gb vram.
337.50 drivers version.

[sculpt_scene.blend](https://archive.blender.org/developer/F87246/sculpt_scene.blend) Ok, I attached simple scene. For me - as soon as I go down to 0 subd view level - polygons are hidden. As soon as i go up - all becomes visible. Hiding works only in solid mode. If i go to textured mode - all polygons are visible always. Also no masking is visible. My system: i7, 32gb ram, geforce 780gtx 3gb vram. 337.50 drivers version.

Actually, please do fill in the details exactly as required in our bug report guidelines.. I can't go on by guesswork here.

Actually, please do fill in the details exactly as required in our bug report guidelines.. I can't go on by guesswork here.

System Information
Windows 8.1 update 1 64bit
geForce 780gtx, 3GB vram

Also tested on MacBook Pro and got the same results:
MacBook Pro, i7, geForce 650m, 16gb ram, 512 Mb VRAM

Blender Version
Broken: v2.70.5 (Hash 7660218), all other versions
Worked: never

Short description of error

  1. When hide polygons in sculpt mode, they are hidden only in subdivision level they were hidden in. As soon as you go up or down to other view subdivision level - all polygons become visible in viewport. This happens both with VBO enabled and disabled!!!
  2. It is possible to hide polygons or view sculpt masking only in solid mode. When in textured or wireframe mode - everything is visible + no masking is visible.

Exact steps for others to reproduce the error
sculpt_scene.blend

If you open attached scene and whole monkey head is visible - that is error. Parts should be hidden. Go to subd level 0 and polygons should be hidden there.

**System Information** Windows 8.1 update 1 64bit geForce 780gtx, 3GB vram Also tested on MacBook Pro and got the same results: MacBook Pro, i7, geForce 650m, 16gb ram, 512 Mb VRAM **Blender Version** Broken: v2.70.5 (Hash 7660218), all other versions Worked: never **Short description of error** 1. When hide polygons in sculpt mode, they are hidden only in subdivision level they were hidden in. As soon as you go up or down to other view subdivision level - all polygons become visible in viewport. This happens both with VBO enabled and disabled!!! 2. It is possible to hide polygons or view sculpt masking only in solid mode. When in textured or wireframe mode - everything is visible + no masking is visible. **Exact steps for others to reproduce the error** [sculpt_scene.blend](https://archive.blender.org/developer/F87248/sculpt_scene.blend) If you open attached scene and whole monkey head is visible - that is error. Parts should be hidden. Go to subd level 0 and polygons should be hidden there.

Something is very, very wrong with that file. Well, first of all it uses subsurf instead of multires but by removing that and adding a multires modifier I can see the issue..which is totally broken, I cannot even undo at moments.

It looks like data corruption but what would be more important is finding out how this can happen...Can you lay down the steps to create such a file?

Also, can you do a factory reset and see if the issues persist?

Something is very, very wrong with that file. Well, first of all it uses subsurf instead of multires but by removing that and adding a multires modifier I can see the issue..which is totally broken, I cannot even undo at moments. It looks like data corruption but what would be more important is finding out how this can happen...Can you lay down the steps to create such a file? Also, can you do a factory reset and see if the issues persist?

OK now I can reproduce.

If user adds a subsurf modifier then it creates some sort of issue in sculpting.

This is a bug indeed, but the correct modifier to use for sculpting is multires. Also as you;ve noticed only solid mode supports correct masking and hiding currently.

OK now I can reproduce. If user adds a subsurf modifier then it creates some sort of issue in sculpting. This is a bug indeed, but the correct modifier to use for sculpting is multires. Also as you;ve noticed only solid mode supports correct masking and hiding currently.

Hmm, I see - when I use multires. I used subsurf, because of default keyboard shortcuts (PageUp/Down in sculpt mode - they automatically add subsurf modifier).

Not sure what was wrong with the file - I did nothing there, just opened blender, added monkeyhead and entered sculpt mode.

Hmm, I see - when I use multires. I used subsurf, because of default keyboard shortcuts (PageUp/Down in sculpt mode - they automatically add subsurf modifier). Not sure what was wrong with the file - I did nothing there, just opened blender, added monkeyhead and entered sculpt mode.

OK, that's an issue on itself I guess. I'll try to make the shortcuts add a multires modifier.

OK, that's an issue on itself I guess. I'll try to make the shortcuts add a multires modifier.

This issue was referenced by blender/blender-addons-contrib@0d85be5950

This issue was referenced by blender/blender-addons-contrib@0d85be59506efebf7df691f80ed24d12c767b3ae

This issue was referenced by 0d85be5950

This issue was referenced by 0d85be59506efebf7df691f80ed24d12c767b3ae

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 0d85be5950.

Closed by commit 0d85be5950.

It's not possible to prohibit users from using modifiers that disable optimal drawing. In that case, just added a warning on the modifier panel so at least users know that this is normal.

It's not possible to prohibit users from using modifiers that disable optimal drawing. In that case, just added a warning on the modifier panel so at least users know that this is normal.

Oh, also Ctrl + number and PageUp/PageDown keys now add a multires in sculpt mode. I hope this will mitigate any accidents in the future ;)

Oh, also Ctrl + number and PageUp/PageDown keys now add a multires in sculpt mode. I hope this will mitigate any accidents in the future ;)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39950
No description provided.